# rustops-gui

./: Cargo.toml  README.md  rustops-gui.desktop  rustops_db.json
src/: app.rs  errors.rs  main.rs  ollama.rs  system_stats.rs  utils.rs
src/ui/: footer.rs
