[package]
name = "rustops-gui"
version = "0.1.4"
edition = "2024"
license = "GPL-3.0-or-later"
authors = ["Danilo Ferreira Sousa"]
description = "Assistente de IA local focado em Engenharia e Segurança Ofensiva e Defensiva em Rust, uso estritamente para fins educacionais."

[dependencies]
eframe = "0.33.3" # GUI framework com egui
reqwest = { version = "0.11", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
image = "0.24"
webbrowser = "0.8"
egui_commonmark = "0.22.0"

[build-dependencies]
winres = "0.1"

[package.metadata.deb]
maintainer = "Danilo Ferreira Sousa <daniloasf@outlook.com>"
copyright = "2026, Danilo Ferreira"
license-file = []
extended-description = "Interface nativa focada em Rust para modelos de IA locais."
depends = "$auto"
section = "utility"
priority = "optional"
assets = [
    # Copia o executável
    ["target/release/rustops-gui", "usr/bin/", "755"],
    # Copia o ícone
    ["icone.png", "usr/share/pixmaps/rustops.png", "644"],
    # NOVO: Copia o atalho para o menu de aplicativos do Linux
    ["rustops-gui.desktop", "usr/share/applications/", "644"],
]

# Injeta as dependências nativas do Windows forçando a feature 'winuser'
[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.9", features = ["winuser"] }


[profile.release]
opt-level = 'z'     # Otimiza focado em reduzir o TAMANHO do arquivo final.
lto = true          # Link Time Optimization: O compilador analisa todo o código de uma vez para remover funções inúteis. Reduz drasticamente o tamanho!
codegen-units = 1   # Força o compilador a trabalhar em um núcleo só. Demora mais para compilar, mas o arquivo final fica mais otimizado.
strip = true        # ESSENCIAL: Remove os "símbolos de debug". Pega um .exe de 30MB e transforma em um de 8MB.
panic = 'abort'     # Se o programa der um erro fatal (panic), ele fecha direto em vez de tentar rastrear o erro. Economiza bastante espaço.